--- a/src/main/webapp/home.page/home-page.template.html
+++ b/src/main/webapp/home.page/home-page.template.html
@@ -1,12 +1,26 @@
-<html lang="en">
+<html lang="en" ng-app="shopApp">
 <head>
     <meta charset="UTF-8">
     <title>DrunkIrishman</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link rel="stylesheet" href="/resources/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="/view/css/mainPage.css"/>
+    <link rel="stylesheet" href="/home.page/home-page.styles.css"/>
+
+    <script src="/resources/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/resources/js/jquery-3.2.1.min.js"></script>
+    <script src="/resources/js/angular.min.js"></script>
+    <script src="/resources/js/angular-resource.min.js"></script>
+    <script src="/resources/js/angular-route.min.js"></script>
+
+    <script src="/home.page/home-page.module.js"></script>
+    <script src="/home.page/home-page.config.js"></script>
+    <!--<script src="/home.page/home-page.component.js"></script>-->
+
+    <script src="/login/login.module.js"></script>
+    <script src="/login/login.component.js"></script>
 </head>
-<body ng-app="mainApp">
+<body>
 
     <div id="top-header">
         <div class="col-sm-4 text-center proverb">G O O D &nbsp;&nbsp; P E O P L E</div>
@@ -46,7 +60,7 @@
                 </form>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-                    <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                    <li><a href="#!/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
                 </ul>
             </div>
         </div>
@@ -54,8 +68,11 @@
 
 
     <div class="panel panel-default" id="content-panel">
-        <div id="content-panel-heading" class="panel-heading">Category</div>
-        <div class="panel-body">products</div>
+        <!--<div id="content-panel-heading" class="panel-heading">Category</div>-->
+        <!--<div class="panel-body">products</div>-->
+
+        <div ng-view></div>
+
     </div>
 
 
@@ -65,43 +82,5 @@
         </footer>
     </div>
 
-
-    <!--<div class="container" style="margin-top: 30px" ng-controller="UsersCtrl">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="panel panel-default">
-                    <div class="panel-heading">Users:</div>
-                    <div class="panel-body">
-                        <table class="table table-striped">
-                            <thead>
-                            <tr>
-                                <th>email</th>
-                                <th>name</th>
-                                <th>surname</th>
-                                <th>address</th>
-                                <th>phone</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <tr ng-repeat="user in users">
-                                <td>{{user.email}}</td>
-                                <td>{{user.name}}</td>
-                                <td>{{user.surname}}</td>
-                                <td>{{user.address}}</td>
-                                <td>{{user.phone}}</td>
-                            </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>-->
-
-<script src="/resources/bootstrap/jquery-3.2.1.min.js"></script>
-<script src="/resources/bootstrap/js/bootstrap.min.js"></script>
-
-<script type="text/javascript" src="/resources/js/angular.min.js"></script>
-    <script type="text/javascript" src="/view/js/mainPage.js"></script>
 </body>
 </html>
