files hierarchy changed

--- a/src/main/webapp/home.page/index.html
+++ b/src/main/webapp/home.page/index.html
@@ -13,8 +13,8 @@
     <script src="/resources/js/angular-resource.min.js"></script>
     <script src="/resources/js/angular-route.min.js"></script>
 
-    <script src="/home.page/home-page.module.js"></script>
-    <script src="/home.page/home-page.config.js"></script>
+    <script src="/home.page/app.module.js"></script>
+    <script src="/home.page/app.config.js"></script>
     <!--<script src="/home.page/home-page.component.js"></script>-->
 
     <script src="/login/login.module.js"></script>
