--- a/src/main/webapp/login/login.template.html
+++ b/src/main/webapp/login/login.template.html
@@ -11,11 +11,11 @@
                     <form ng-submit="submit()" method="post" id="login-form" autocomplete="off">
                         <div class="form-group">
                             <label for="email" class="sr-only">Email</label>
-                            <input ng-model="email" type="email" name="email" id="email" class="form-control" placeholder="somebody@example.com">
+                            <input ng-model="email" type="email" id="email" class="form-control" placeholder="somebody@example.com">
                         </div>
                         <div class="form-group">
                             <label for="password" class="sr-only">Password</label>
-                            <input type="password" name="password" id="password" class="form-control" placeholder="Password">
+                            <input ng-model="password" type="password" id="password" class="form-control" placeholder="Password">
                         </div>
                         <div class="checkbox">
                             <span class="character-checkbox" onclick="showPassword()"></span>
