sign up server part created

--- a/src/main/webapp/home.page/index.html
+++ b/src/main/webapp/home.page/index.html
@@ -21,11 +21,11 @@
 <body>
 
     <div id="top-header">
-        <div class="col-sm-4 text-center proverb">G O O D &nbsp;&nbsp; P E O P L E</div>
-        <div class="col-sm-4">
+        <div class="col-xs-4 text-center proverb">G O O D &nbsp;&nbsp; P E O P L E</div>
+        <div class="col-xs-4">
             <a href="/"><img id="emblem" src="/resources/image/emblem.png"/></a>
         </div>
-        <div class="col-sm-4 text-center proverb">D R I N K &nbsp;&nbsp; G O O D &nbsp;&nbsp; B E E R</div>
+        <div class="col-xs-4 text-center proverb">D R I N K &nbsp;&nbsp; G O O D &nbsp;&nbsp; B E E R</div>
     </div>
 
 
