--- a/src/main/webapp/sign.up/sign-up.template.html
+++ b/src/main/webapp/sign.up/sign-up.template.html
@@ -1,99 +1,89 @@
 <head>
     <link rel="stylesheet" href="/sign.up/sign-up.styles.css"/>
 </head>
-<div class="container" style="bottom: 100px;">
-    <form class="form-horizontal" role="form">
-        <h2>Registration Form</h2>
+
+<section id="sign-up">
+    <form ng-submit="submit()" method="post" class="form-horizontal" id="sign-up-form" autocomplete="off">
+        <h1>Create your account</h1>
+
         <div class="form-group">
-            <label for="firstName" class="col-sm-3 control-label">Full Name</label>
+            <label for="firstName" class="col-sm-3 control-label"><span class="req">* </span>First Name</label>
             <div class="col-sm-9">
-                <input type="text" id="firstName" placeholder="Full Name" class="form-control" autofocus>
-                <span class="help-block">Last Name, First Name, eg.: Smith, Harry</span>
+                <input ng-model="firstName" class="form-control" type="text" id="firstName"
+                       onkeyup="validateText(this)" placeholder="Insert your Firs Name" required/>
+                <div id="errFirst"></div>
             </div>
         </div>
+
         <div class="form-group">
-            <label for="email" class="col-sm-3 control-label">Email</label>
+            <label for="lastName" class="col-sm-3 control-label"><span class="req">* </span>Last Name</label>
             <div class="col-sm-9">
-                <input type="email" id="email" placeholder="Email" class="form-control">
+                <input ng-model="lastName" class="form-control" type="text" id="lastName" onkeyup="validateText(this)"
+                       placeholder="Insert your Last Name" required/>
+                <div id="errLast"></div>
             </div>
         </div>
+
         <div class="form-group">
-            <label for="password" class="col-sm-3 control-label">Password</label>
+            <label for="email" class="col-sm-3 control-label"><span class="req">* </span>E-mail</label>
             <div class="col-sm-9">
-                <input type="password" id="password" placeholder="Password" class="form-control">
+                <input ng-model="email" class="form-control" type="email" id="email"
+                       onchange="validateEmail(this.value);" placeholder="somebody@example.com" required/>
+                <div class="status" id="status"></div>
             </div>
         </div>
+
         <div class="form-group">
-            <label for="birthDate" class="col-sm-3 control-label">Date of Birth</label>
+            <label for="pass1" class="col-sm-3 control-label"><span class="req">* </span>Password</label>
             <div class="col-sm-9">
-                <input type="date" id="birthDate" class="form-control">
+                <input ng-model="password" type="password" class="form-control inputpass" minlength="4" maxlength="16"
+                       id="pass1" placeholder="Insert your Password" required/>
             </div>
         </div>
+
         <div class="form-group">
-            <label for="country" class="col-sm-3 control-label">Country</label>
+            <label for="pass2" class="col-sm-3 control-label"><span class="req">* </span>Confirm Password</label>
             <div class="col-sm-9">
-                <select id="country" class="form-control">
-                    <option>Afghanistan</option>
-                    <option>Bahamas</option>
-                    <option>Cambodia</option>
-                    <option>Denmark</option>
-                    <option>Ecuador</option>
-                    <option>Fiji</option>
-                    <option>Gabon</option>
-                    <option>Haiti</option>
-                </select>
-            </div>
-        </div> <!-- /.form-group -->
-        <div class="form-group">
-            <label class="control-label col-sm-3">Gender</label>
-            <div class="col-sm-6">
-                <div class="row">
-                    <div class="col-sm-4">
-                        <label class="radio-inline">
-                            <input type="radio" id="femaleRadio" value="Female">Female
-                        </label>
-                    </div>
-                    <div class="col-sm-4">
-                        <label class="radio-inline">
-                            <input type="radio" id="maleRadio" value="Male">Male
-                        </label>
-                    </div>
-                    <div class="col-sm-4">
-                        <label class="radio-inline">
-                            <input type="radio" id="uncknownRadio" value="Unknown">Unknown
-                        </label>
-                    </div>
-                </div>
-            </div>
-        </div> <!-- /.form-group -->
-        <div class="form-group">
-            <label class="control-label col-sm-3">Meal Preference</label>
-            <div class="col-sm-9">
-                <div class="checkbox">
-                    <label>
-                        <input type="checkbox" id="calorieCheckbox" value="Low calorie">Low calorie
-                    </label>
-                </div>
-                <div class="checkbox">
-                    <label>
-                        <input type="checkbox" id="saltCheckbox" value="Low salt">Low salt
-                    </label>
-                </div>
-            </div>
-        </div> <!-- /.form-group -->
-        <div class="form-group">
-            <div class="col-sm-9 col-sm-offset-3">
-                <div class="checkbox">
-                    <label>
-                        <input type="checkbox">I accept <a href="#">terms</a>
-                    </label>
-                </div>
-            </div>
-        </div> <!-- /.form-group -->
-        <div class="form-group">
-            <div class="col-sm-9 col-sm-offset-3">
-                <button type="submit" class="btn btn-primary btn-block">Register</button>
+                <input type="password" class="form-control inputpass" minlength="4" maxlength="16"
+                       placeholder="Confirm your Password" id="pass2" required
+                       onkeyup="checkPass(); return false;"/>
+                <span id="confirmMessage" class="confirmMessage"></span>
             </div>
         </div>
-    </form> <!-- /form -->
-</div> <!-- ./container -->
+
+        <div class="form-group">
+            <label for="birthDate" class="col-sm-3 control-label"><span class="req">* </span>Date of Birth</label>
+            <div class="col-sm-9">
+                <input ng-model="birthDate" type="date" id="birthDate" class="form-control" required>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label for="address" class="col-sm-3 control-label">Address</label>
+            <div class="col-sm-9">
+                <input ng-model="address" class="form-control" type="text" id="address" onkeyup="validateAddress(this)"
+                       placeholder="Insert your Address"/>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label for="phone" class="col-sm-3 control-label"><span class="req">* </span>Contact No.</label>
+            <div class="col-sm-9">
+                <input ng-model="phone" type="text" id="phone" class="form-control phone" maxlength="28"
+                       onkeyup="validatePhone(this);" placeholder="Insert your Phone Number" required/>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-sm-3"></div>
+            <div class="col-sm-9">
+                <button type="submit" class="btn btn-custom btn-lg btn-block">Sign up</button>
+            </div>
+        </div>
+
+    </form>
+
+    <script type="text/javascript">
+        document.getElementById("field_terms").setCustomValidity("Please indicate that you accept the Terms and Conditions");
+    </script>
+</section>
