--- a/src/main/webapp/home.page/index.html
+++ b/src/main/webapp/home.page/index.html
@@ -17,6 +17,7 @@
     <!--<script src="/home.page/home-page.component.js"></script>-->
     <script src="/login/login.component.js"></script>
     <script src="/sign.up/sign-up.component.js"></script>
+    <script src="/catalog/catalog.component.js"></script>
 </head>
 <body>
 
@@ -33,7 +34,7 @@
         <div class="container-fluid">
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="#">Home</a></li>
+                    <li><a href="#!/">Home</a></li>
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Category <span class="caret"></span></a>
                         <ul class="dropdown-menu">
@@ -66,8 +67,6 @@
 
 
     <div class="panel panel-default" id="content-panel">
-        <!--<div id="content-panel-heading" class="panel-heading">Category</div>-->
-        <!--<div class="panel-body">products</div>-->
 
         <div ng-view></div>
 
