--- a/src/main/webapp/home.page/index.html
+++ b/src/main/webapp/home.page/index.html
@@ -36,7 +36,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="#!/">Home</a></li>
                     <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Category <span class="caret"></span></a>
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="">Category <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="#">All category</a></li>
                             <li><a href="#">Page 1-1</a></li>
