dropdown toggle of category created

--- a/src/main/webapp/catalog/catalog.template.html
+++ b/src/main/webapp/catalog/catalog.template.html
@@ -3,7 +3,7 @@
 </head>
 
 <div id="panel-heading" class="panel-heading">
-    All category
+    All categories
 </div>
 <div class="panel-body">
     <div ng-repeat="product in $ctrl.products">
