--- a/src/main/webapp/home.page/index.html
+++ b/src/main/webapp/home.page/index.html
@@ -14,7 +14,7 @@
     <script src="/resources/js/angular-route.min.js"></script>
 
     <script src="/home.page/app.config.js"></script>
-    <!--<script src="/home.page/home-page.component.js"></script>-->
+    <script src="/home.page/navbar.controller.js"></script>
     <script src="/login/login.component.js"></script>
     <script src="/sign.up/sign-up.component.js"></script>
     <script src="/catalog/catalog.component.js"></script>
@@ -30,7 +30,7 @@
     </div>
 
 
-    <nav class="navbar navbar-default" id="main-navbar">
+    <nav class="navbar navbar-default" id="main-navbar" ng-controller="navbarCtrl">
         <div class="container-fluid">
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
@@ -38,10 +38,12 @@
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="">Category <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">All category</a></li>
-                            <li><a href="#">Page 1-1</a></li>
-                            <li><a href="#">Page 1-2</a></li>
-                            <li><a href="#">Page 1-3</a></li>
+                            <li><a href="#">Categories</a></li>
+                            <li ng-repeat="category in categories | orderBy:orderProp">
+                                <a href="" ng-click="chooseCategory(category)" >
+                                    {{category.name}}
+                                </a>
+                            </li>
                         </ul>
                     </li>
                     <!--<li><a href="#">Page 2</a></li>-->
