--- a/src/main/webapp/home.page/index.html
+++ b/src/main/webapp/home.page/index.html
@@ -34,7 +34,7 @@
         <div class="container-fluid">
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="#!/">Home</a></li>
+                    <li><a href="#!/home">Home</a></li>
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="">Classification <span class="caret"></span></a>
                         <ul class="dropdown-menu">
