classification catalog created

--- a/src/main/webapp/home.page/index.html
+++ b/src/main/webapp/home.page/index.html
@@ -18,6 +18,7 @@
     <script src="/login/login.component.js"></script>
     <script src="/sign.up/sign-up.component.js"></script>
     <script src="/catalog/products/catalog-products.component.js"></script>
+    <script src="/catalog/categories/catalog-categories.component.js"></script>
 </head>
 <body>
 
