--- a/src/main/webapp/login/login.template.html
+++ b/src/main/webapp/login/login.template.html
@@ -10,12 +10,14 @@
                     <h1>Log in with email for your account</h1>
                     <form ng-submit="submit()" method="post" id="login-form" autocomplete="off">
                         <div class="form-group">
-                            <label for="username" class="sr-only">Email</label>
-                            <input ng-model="username" type="text" id="username" class="form-control" placeholder="somebody@example.com">
+                            <label for="email" class="sr-only">Email</label>
+                            <input ng-model="email" type="email" id="email" class="form-control"
+                                   placeholder="somebody@example.com">
                         </div>
                         <div class="form-group">
                             <label for="password" class="sr-only">Password</label>
-                            <input ng-model="password" type="password" id="password" class="form-control" placeholder="Password">
+                            <input ng-model="password" type="password" id="password" class="form-control"
+                                   placeholder="Password">
                         </div>
                         <div class="checkbox">
                             <span class="character-checkbox" onclick="showPassword()"></span>
