--- a/src/main/webapp/home.page/index.html
+++ b/src/main/webapp/home.page/index.html
@@ -34,10 +34,14 @@
     <nav class="navbar navbar-default" id="main-navbar" ng-controller="navbarCtrl">
         <div class="container-fluid">
             <div class="collapse navbar-collapse">
+
                 <ul class="nav navbar-nav">
                     <li><a href="#!/home">Home</a></li>
+
                     <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="">Classification <span class="caret"></span></a>
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="">
+                            Classification&nbsp;<span class="caret"></span>
+                        </a>
                         <ul class="dropdown-menu">
                             <li><a href="#!/catalog">Classification</a></li>
                             <li ng-repeat="category in categories | orderBy:orderProp">
@@ -45,9 +49,11 @@
                             </li>
                         </ul>
                     </li>
+
                     <!--<li><a href="#">Page 2</a></li>-->
                     <!--<li><a href="#">Page 3</a></li>-->
                 </ul>
+
                 <form class="navbar-form navbar-left">
                     <div class="input-group">
                         <input type="text" class="form-control search-group" placeholder="Search">
@@ -58,9 +64,18 @@
                         </div>
                     </div>
                 </form>
+
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#!/signUp"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-                    <li><a href="#!/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                    <div class="nav navbar-nav">
+                        <li><a href="#!/">
+                            <div id="goods-quantity-bracket">
+                                <span class="glyphicon glyphicon-shopping-cart"></span>&nbsp;Basket
+                                ({{goodsQuantity}})
+                            </div>
+                        </a></li>
+                    </div>
+                    <li><a href="#!/signUp"><span class="glyphicon glyphicon-user"></span>&nbsp;Sign Up</a></li>
+                    <li><a href="#!/login"><span class="glyphicon glyphicon-log-in"></span>&nbsp;Login</a></li>
                 </ul>
             </div>
         </div>
