--- a/src/main/webapp/login/login.template.html
+++ b/src/main/webapp/login/login.template.html
@@ -11,13 +11,21 @@
                     <form ng-submit="submit()" method="post" id="login-form" autocomplete="off">
                         <div class="form-group">
                             <label for="email" class="sr-only">Email</label>
-                            <input ng-model="email" type="email" id="email" class="form-control"
-                                   placeholder="somebody@example.com">
+
+                            <div class="input-group">
+                                <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+                                <input ng-model="email" type="email" id="email" class="form-control"
+                                       placeholder="somebody@example.com">
+                            </div>
                         </div>
                         <div class="form-group">
                             <label for="password" class="sr-only">Password</label>
-                            <input ng-model="password" type="password" id="password" class="form-control"
-                                   placeholder="Password">
+
+                            <div class="input-group">
+                                <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                                <input ng-model="password" type="password" id="password" class="form-control"
+                                       placeholder="Password">
+                            </div>
                         </div>
                         <div class="checkbox">
                             <span class="character-checkbox" onclick="showPassword()"></span>
