--- a/src/main/webapp/home.page/index.html
+++ b/src/main/webapp/home.page/index.html
@@ -19,6 +19,7 @@
     <script src="/sign.up/sign-up.component.js"></script>
     <script src="/catalog/products/catalog-products.component.js"></script>
     <script src="/catalog/categories/catalog-categories.component.js"></script>
+    <script src="/catalog/product.detail/product-detail.component.js"></script>
 </head>
 <body>
 
