--- a/src/main/webapp/catalog/products/catalog-products.template.html
+++ b/src/main/webapp/catalog/products/catalog-products.template.html
@@ -7,22 +7,23 @@
 </div>
 <div class="panel-body">
     <div ng-repeat="product in products">
-        <div class="col-xs-3 container">
-            <div class="thumbnail">
-                <a href="#!/catalog/{{categoryName}}/{{product.id}}">
+        <div id="#outer-container" class="col-xs-3">
+            <a id="clickable-panel" href="#!/catalog/{{categoryName}}/{{product.id}}">
+                <div class="thumbnail panel-body">
                     <img ng-src="/resources/image/products/{{product.id}}.jpg" id="photo">
                     <div id="inner-container">
-                        <div class="capital-row">{{product.name}}</div>
+                        <div id="capital-row">{{product.name}}</div>
                         <div class="row">
-                            {{product.capacity}} l
+                            {{product.capacity}}&nbsp;l
                             <span id="availability">In stock</span>
                         </div>
-                        <div class="row"><span id="price">{{product.price}} $</span>
+                        <div class="row">
+                            <span id="price">{{product.price}}&nbsp;$</span>
                             <button type="button" class="btn btn-success" id="buy-button">Add to basket</button>
                         </div>
                     </div>
-                </a>
-            </div>
+                </div>
+            </a>
         </div>
     </div>
 </div>
