--- a/src/main/webapp/catalog/products/catalog-products.template.html
+++ b/src/main/webapp/catalog/products/catalog-products.template.html
@@ -7,7 +7,7 @@
 </div>
 <div class="panel-body">
     <div ng-repeat="product in products">
-        <div id="#outer-container" class="col-xs-3">
+        <div id="outer-container" class="col-xs-3">
             <a class="clickable-panel" href="#!/catalog/{{categoryName}}/{{product.id}}">
                 <div class="thumbnail panel-body">
                     <img ng-src="/resources/image/products/{{product.id}}.jpg" id="photo">
