--- a/src/main/webapp/home.page/index.html
+++ b/src/main/webapp/home.page/index.html
@@ -70,10 +70,10 @@
 
                 <ul class="nav navbar-nav navbar-right">
                     <div class="nav navbar-nav">
-                        <li><a href="" ng-click="showBasket()">
+                        <li id="basket"><a href="" ng-click="showBasket()">
                             <div id="goods-quantity-bracket">
                                 <span class="glyphicon glyphicon-shopping-cart"></span>&nbsp;Basket
-                                ({{goodsQuantity}})
+                                ({{basketSize}})
                             </div>
                         </a></li>
                     </div>
