--- a/src/main/webapp/home.page/index.html
+++ b/src/main/webapp/home.page/index.html
@@ -22,6 +22,7 @@
     <script src="/catalog/categories/catalog-categories.component.js"></script>
     <script src="/catalog/product.detail/product-detail.component.js"></script>
     <script src="/basket/basket.component.js"></script>
+    <script src="/basket/basket.service.js"></script>
 </head>
 <body>
 
