--- a/src/main/webapp/basket/basket.template.html
+++ b/src/main/webapp/basket/basket.template.html
@@ -4,7 +4,7 @@
 
 <div class="app-modal-window">
     <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true"  ng-click="cancel()">&times;</button>
+        <button type="button" class="close" data-dismiss="modal" aria-hidden  ng-click="cancel()">&#128473;</button>
         <h4 class="modal-title">Basket <span class="glyphicon glyphicon-shopping-cart"></span>
             <span id="basketSize">({{basketSize}})</span></h4>
     </div>
@@ -26,10 +26,10 @@
             </div>
 
             <div class="column">
-                <div style="display: inline-flex; vertical-align: top">
+                <div id="number-spinner-container">
                     <div class="input-group number-spinner" id="numberField">
 				        <span class="input-group-btn">
-					        <button ng-click="removeFromBasket(product)"
+					        <button ng-click="decrease(product)"
                                     class="btn btn-default" data-dir="dwn">
                             <span class="glyphicon glyphicon-minus"></span></button>
 				        </span>
@@ -43,6 +43,8 @@
                 </div>
                 <div id="total">Total:&nbsp;{{sum(product)}}&nbsp;$</div>
             </div>
+
+            <button type="button" class="close" aria-hidden  ng-click="removeFromBasket(product)">&#128937;</button>
 
             <hr>
         </div>
