product details view

--- a/src/main/webapp/basket/basket.template.html
+++ b/src/main/webapp/basket/basket.template.html
@@ -30,13 +30,13 @@
                     <div class="input-group number-spinner" id="numberField">
 				        <span class="input-group-btn">
 					        <button ng-click="decrease(product)"
-                                    class="btn btn-default" data-dir="dwn">
+                                    class="btn btn-default spinner-btn" data-dir="dwn">
                             <span class="glyphicon glyphicon-minus"></span></button>
 				        </span>
                         <input class="form-control text-center" value="{{product.counter}}" readonly>
                         <span class="input-group-btn">
 					        <button ng-click="addToBasket(product)"
-                                    class="btn btn-default" data-dir="up">
+                                    class="btn btn-default spinner-btn" data-dir="up">
                             <span class="glyphicon glyphicon-plus"></span></button>
 				        </span>
                     </div>
