--- a/src/main/webapp/catalog/products/catalog-products.template.html
+++ b/src/main/webapp/catalog/products/catalog-products.template.html
@@ -25,8 +25,8 @@
                         <div class="row">
                             <span id="price">{{product.price}}&nbsp;$</span>
                             <a>
-                            <button ng-controller="navbarCtrl" ng-click="addToBasket(product)"
-                                    type="button" class="btn btn-success" id="buy-button">Add to basket</button>
+                            <button ng-click="addToBasket(product)" type="button" class="btn btn-success"
+                                    id="buy-button">Add to basket</button>
                             </a>
                         </div>
                         </a>
