go to category from details

--- a/src/main/webapp/catalog/product.detail/product-detail.template.html
+++ b/src/main/webapp/catalog/product.detail/product-detail.template.html
@@ -3,7 +3,7 @@
 </head>
 
 <div id="panel-heading" class="panel-heading">
-    {{categoryName}}
+    <a id="category" href="#!/catalog/{{categoryName}}">{{categoryName}}</a>
 </div>
 <div class="panel-body">
     <div class=" col-sm-4 thumbnail">
