--- a/src/main/webapp/login/login.template.html
+++ b/src/main/webapp/login/login.template.html
@@ -15,7 +15,7 @@
                             <div class="input-group">
                                 <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
                                 <input ng-model="email" type="email" id="email" class="form-control"
-                                       placeholder="somebody@example.com">
+                                       placeholder="somebody@example.com" required>
                             </div>
                         </div>
                         <div class="form-group">
@@ -24,7 +24,7 @@
                             <div class="input-group">
                                 <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
                                 <input ng-model="password" type="password" id="password" class="form-control"
-                                       placeholder="Password">
+                                       placeholder="Password" required>
                             </div>
                         </div>
                         <div class="checkbox">
