auto login after registration, registration error message in registration form

--- a/src/main/webapp/login/login.template.html
+++ b/src/main/webapp/login/login.template.html
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="form-wrap">
-                    <div style="color: red; text-align: center; height: 20px">
+                    <div id="errorMessage">
                         {{errorMessage}}
                     </div>
                     <h1>Log in with email for your account</h1>
