--- a/src/main/webapp/home.page/index.html
+++ b/src/main/webapp/home.page/index.html
@@ -24,6 +24,8 @@
     <script src="/basket/basket.component.js"></script>
     <script src="/basket/basket.service.js"></script>
     <script src="/search.product/search-product.component.js"></script>
+    <script src="/catalog/categories/category.editor/category-editor.component.js"></script>
+    <script src="/catalog/categories/category.editor/category-creator.component.js"></script>
 </head>
 <body>
 
